--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ hmac = "0.12"
 sha2 = "0.10"
 hex = "0.4"
 tempfile = "3.0"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
