--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ sha2 = "0.10"
 hex = "0.4"
 tempfile = "3.0"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
+askama = "0.12"
+tower-http = { version = "0.6", features = ["fs"] }
+tokio-tungstenite = "0.24"
