--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ askama = "0.12"
 tower-http = { version = "0.6", features = ["fs"] }
 tokio-tungstenite = "0.24"
 config = "0.14"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
