--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ tower-http = { version = "0.6", features = ["fs"] }
 tokio-tungstenite = "0.24"
 config = "0.14"
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
+chrono = "0.4"
