--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ tokio-tungstenite = "0.24"
 config = "0.14"
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
 chrono = "0.4"
-daggy = "0.8"
+daggy = { version = "0.8", features = ["stable_dag"] }
